# SeedEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  format.sh  install.sh  run.bat  run.sh  run_editor.bat  run_editor.sh  test.sh  vcpkg.json
assets/: debug.frag  debug.gs  debug.vert  default.frag  fragment.glsl  mesh_debug.frag  mesh_debug.vert  sky.json  sky.vert  terrain.frag  terrain.tesc  terrain.tese  terrain.tesseval  terrain.vert  vertex.glsl
assets/backpack/: test.mdl
core/: CMakeLists.txt  engine.cc  engine.h  entity.cc  entity.h  handle.h  input.cc  input.h  input_handler.cc  input_handler.h  macro.h  model_entity.cc  model_entity.h  os.cc  os.h  ref.h  render_engine.cc  render_engine.h  resource.cc  resource.h  types.h  window.cc  window.h  world.cc  world.h
core/allocator/: CMakeLists.txt  linear_allocator.cc  linear_allocator.h
core/collision/: CMakeLists.txt  aabb.h  gjk.h  octree.cc  octree.h  plane.h  shape.h
core/concurrency/: CMakeLists.txt  thread_pool.cc  thread_pool.h
core/container/: CMakeLists.txt  freelist.cc  freelist.h  ring_buffer.h
core/debug/: CMakeLists.txt  debug_drawer.cc  debug_drawer.h
core/gui/: CMakeLists.txt  gui.h  gui_engine.cc  gui_engine.h
core/io/: file.h
core/math/: mat3.h  mat4.h  quaternion.h  utils.h  vec2.h  vec3.h  vec4.h
core/physic/: CMakeLists.txt  jolt_backend.h  physic_engine.cc  physic_engine.h
core/rendering/: CMakeLists.txt  camera.cc  camera.h  light.h  material.cc  material.h  mesh.cc  mesh.h  model.cc  model.h  model_file.h  render_common.h  shader.cc  shader.h  terrain.cc  terrain.h  texture.cc  texture.h  vertex_data.cc  vertex_data.h  vertex_desc.cc  vertex_desc.h  viewport.h
core/rendering/api/: CMakeLists.txt  opengl_backend.cc  opengl_backend.h  render_backend.h  render_command.cc  render_command.h  render_common.h  render_device.h  render_device_opengl.cc  render_device_opengl.h  render_engine.cc  render_engine.h  render_pipeline.cc  render_pipeline.h  render_resource.cc  render_resource.h  render_target.h
core/rendering/render_pass/: CMakeLists.txt  color_pass.cc  color_pass.h  debug_pass.cc  debug_pass.h  render_pass.h
core/rendering/renderer/: CMakeLists.txt  imgui_renderer.cc  imgui_renderer.h  model_renderer.cc  model_renderer.h  renderer.h  terrain_renderer.cc  terrain_renderer.h
core/resource/: CMakeLists.txt  default_storage.cc  default_storage.h  image.cc  image.h  material.cc  material.h  model.cc  model.h  resource.cc  resource.h  resource_loader.cc  resource_loader.h  shader.h  sky.h  terrain.cc  terrain.h  texture.cc  texture.h
editor/: CMakeLists.txt  editor.cc  editor_camera.h  model_load_ui.h  resource.cc  resource.h  terrain_gui.cc  terrain_gui.h
game/: CMakeLists.txt  camera_entity.cc  camera_entity.h  game.cc
include/seed/: engine.h  entity.h  input.h  object.h  ref.h  render_engine.h  resource.h  world.h
include/seed/io/: file.h
include/seed/math/: mat3.h  mat33.h  mat4.h  utils.h  vec2.h  vec3.h  vec4.h
include/seed/rendering/: camera.h  mesh.h  shader.h  texture.h
src/: CMakeLists.txt  camera.cc  engine.cc  entity.cc  input.cc  mesh.cc  render_engine.cc  resource.cc  shader.cc  world.cc
